c_headers/H5public.h

/*
 * Status return values.  Failed integer functions in HDF5 result almost
 * always in a negative value (unsigned failing functions sometimes return
 * zero for failure) while successfull return is non-negative (often zero).
 * The negative failure value is most commonly -1, but don't bet on it.  The
 * proper way to detect failure is something like:
 *
 * 	if((dset = H5Dopen2(file, name)) < 0)
 *	    fprintf(stderr, "unable to open the requested dataset\n");
 */
typedef int herr_t;
/*
 * Boolean type.  Successful return values are zero (false) or positive
 * (true). The typical true value is 1 but don't bet on it.  Boolean
 * functions cannot fail.  Functions that return `htri_t' however return zero
 * (false), positive (true), or negative (failure). The proper way to test
 * for truth from a htri_t function is:
 *
 * 	if ((retval = H5Tcommitted(type))>0) {
 *	    printf("data type is committed\n");
 *	} else if (!retval) {
 * 	    printf("data type is not committed\n");
 *	} else {
 * 	    printf("error determining whether data type is committed\n");
 *	}
 */
/* #ifdef H5_HAVE_STDBOOL_H */
/*   #include <stdbool.h> */
/* #else /\* H5_HAVE_STDBOOL_H *\/ */
/*   #ifndef __cplusplus */
/*     #if defined(H5_SIZEOF_BOOL) && (H5_SIZEOF_BOOL != 0) */
/*       #define bool    _Bool */
/*     #else */
/*       #define bool    unsigned int */
/*     #endif */
/*     #define true    1 */
/*     #define false   0 */
/*   #endif /\* __cplusplus *\/ */
/* #endif /\* H5_HAVE_STDBOOL_H *\/ */
typedef bool hbool_t;
typedef int htri_t;
typedef int ssize_t;
typedef long ssize_t;
typedef long long ssize_t;
/*
 * The sizes of file objects have their own types defined here, use a 64-bit
 * type.
 */
/* #if H5_SIZEOF_LONG_LONG >= 8 */
/* H5_GCC_DIAG_OFF(long-long) */
typedef unsigned long long 	hsize_t;
    typedef unsigned                haddr_t;
    typedef unsigned long           haddr_t;
    typedef unsigned long long      haddr_t;
    typedef short uint32_t;
    typedef unsigned int uint32_t;
    typedef unsigned long uint32_t;
/* Common iteration orders */
typedef enum {
    H5_ITER_UNKNOWN = -1,       /* Unknown order */
    H5_ITER_INC,                /* Increasing order */
    H5_ITER_DEC,                /* Decreasing order */
    H5_ITER_NATIVE,             /* No particular order, whatever is fastest */
    H5_ITER_N		        /* Number of iteration orders */
} H5_iter_order_t;
/*
 * The types of indices on links in groups/attributes on objects.
 * Primarily used for "<do> <foo> by index" routines and for iterating over
 * links in groups/attributes on objects.
 */
typedef enum H5_index_t {
    H5_INDEX_UNKNOWN = -1,	/* Unknown index type			*/
    H5_INDEX_NAME,		/* Index on names 			*/
    H5_INDEX_CRT_ORDER,		/* Index on creation order 		*/
    H5_INDEX_N			/* Number of indices defined 		*/
} H5_index_t;